--- a/resources/assets/sass/styles.scss
+++ b/resources/assets/sass/styles.scss
@@ -1,6 +1,47 @@
 @import "normalize";
 @import "bootstrap";
 
+$primary-color:				 #F44336;
+$primary-color-dark:	 #D32F2F;
+$primary-color-light:	 #FFCDD2;
+$primary-color-text:	 #FFFFFF;
+$accent-color:				 #FF5722;
+$primary-text-color:	 #212121;
+$secondary-text-color: #757575;
+$divider-color:				 #BDBDBD;
+
+
+.primary-color {
+	color : $primary-color;
+}
+
+.primary-color-dark {
+	color: $primary-color-dark;
+}
+
+.primary-color-light {
+	color: $primary-color-light;
+}
+
+.primary-color-text {
+	color: $primary-color-text;
+}
+
+.accent-color {
+	color: $accent-color;
+}
+
+.primary-text-color {
+	color: $primary-text-color;
+}
+
+.secondary-text-color {
+	color: $secondary-text-color;
+}
+
+.divider-color {
+	color: $divider-color;
+}
 
 .row {
 	margin-right: 0px;
@@ -21,4 +62,15 @@
 
 .receta-fecha-wrapper {
 	text-align: right;
+}
+
+.nav-bar {
+	width: 100%;
+	height: 65px;
+	padding: 10px 5px;
+	background: $primary-color;
+}
+
+.button-menu {
+	font-size: 30px;
 }
