--- a/resources/assets/sass/styles.scss
+++ b/resources/assets/sass/styles.scss
@@ -53,6 +53,7 @@ $side-bar-color: #FFFFFF;
 .receta-card {
 	border-bottom: 2px solid gainsboro;
 	padding-bottom: 20px;
+	font-size: 16px;
 }
 
 .receta-card-header {
