--- a/resources/assets/sass/styles.scss
+++ b/resources/assets/sass/styles.scss
@@ -30,6 +30,26 @@ textarea {
 	resize: none;
 }
 
+.btn-file {
+	position: relative;
+	overflow: hidden;
+}
+.btn-file input[type=file] {
+	position: absolute;
+	top: 0;
+	right: 0;
+	min-width: 100%;
+	min-height: 100%;
+	font-size: 100px;
+	text-align: right;
+	filter: alpha(opacity=0);
+	opacity: 0;
+	outline: none;
+	background: white;
+	cursor: inherit;
+	display: block;
+}
+
 .primary-color {
 	color : $primary-color;
 }
@@ -236,4 +256,16 @@ textarea {
 	padding-top: 15px;
 	font-weight: bold;
 	color: $color-text-icons;
+}
+
+.receta-imagenes-form {
+	padding-top: 20px;
+}
+
+.receta-imagenes-boton {
+	width: 100%;
+}
+
+.receta-imagenes-titulo {
+	text-align: center;
 }
